services/loki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: loki-minio-console-ingress
  namespace: ${NS
spec:
  ingressClassName: nginx
  rules:
  - host: loki-minio.${DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: loki-minio-console
            port:
              number: 9001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - loki-minio.${DOMAIN}
    secretName: tls-domain
